# InstApps

./: .env.example  .git-credentials  .gitignore  .replit  Pasted--Application-Error-There-are-multiple-button-elements-with-the-same-auto-generated-ID-When-this--1734231206730.txt  Pasted--type-service-account-project-id-flash-etching-442206-j6-private-key-id-be4ff87-1733364463570.txt  Pasted-024-12-17-22-30-06-34-351ad2b2-User-INFO-utils-google-sheets-Successfully-authenticated-with-service-1734438707874.txt  Pasted-Deployment-Source-Log-2024-12-17-15-47-47-22-e96e18b0-User-INFO-services-form-builder-service-Proces-1734414579572.txt  Pasted-Deployment-Source-Log-2024-12-17-22-17-12-75-351ad2b2-User-INFO-utils-google-sheets-Successfully-con-1734438036242.txt  Pasted-INFO-main-2024--1734437277501.txt  Pasted-INFO-services-payment-service-PaymentService-initialized-with-Stripe-keys-2024-12-17-10-08-26-50-5a5-1734394196189.txt  Pasted-INFO-services-payment-service-Secret-key-prefix-sk-test-2024-12-17-08-55-01-65-ec81b771-User-INF-1734389817588.txt  Pasted-NFO-main-APPLICATION-DEPLOYMENT-VERIFICATION-2024-12-17-16-29-53-69-79e31216-User-INFO-main--1734417066617.txt  Pasted-NFO-main-Required-Metadata-Fields-INFO-main-spreadsheet-id-10oGsPnfLO7-bpyn18CJhPI1iNeks-1734665835611.txt  Pasted-eployment-Source-Log-2024-12-17-15-20-11-92-65f961c4-User-INFO-services-form-builder-service-Process-1734413787317.txt  Pasted-erviceaccount-com-INFO-main-Project-ID-flash-etching-442206-j6-INFO-main-Successfully-loade-1734666260089.txt  README.md  git_backup.py  main.py  print_file.py  (+1 more)
(+15 files in other folders)
