[project]
name = "repl-nix-sheetsyncweb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pandas>=2.2.3",
    "psutil",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.2",
    "watchdog",
    "streamlit-aggrid>=1.0.5",
]
